examples/failures/enforce-configmap-delete-setup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: enforce-configmap-consumer
  annotations:
    dependency.kubedepguard.io/mode: enforce
spec:
  containers:
    - name: app
      image: nginx:stable
