examples/failures/enforce-pod-missing-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: enforce-pod-missing-secret
  annotations:
    dependency.kubedepguard.io/mode: enforce
spec:
  containers:
    - name: app
      image: nginx:stable
