examples/failures/enforce-pod-missing-serviceaccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: enforce-pod-missing-serviceaccount
  annotations:
    dependency.kubedepguard.io/mode: enforce
spec:
  serviceAccountName: does-not-exist
  containers:
    - name: app
      image: nginx:stable
