examples/failures/enforce-secret-delete-setup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: enforce-secret-consumer
  annotations:
    dependency.kubedepguard.io/mode: enforce
spec:
  containers:
    - name: app
      image: nginx:stable
